--- a/json/classic/pom.xml
+++ b/json/classic/pom.xml
@@ -15,7 +15,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   
     <parent>
-        <groupId>ch.qos.logback.contrib</groupId>
+        <groupId>com.linagora</groupId>
         <artifactId>logback-json-parent</artifactId>
         <version>0.1.6-SNAPSHOT</version>
     </parent>
@@ -32,7 +32,7 @@
            <version>${logback.version}</version>
        </dependency>
         <dependency>
-            <groupId>ch.qos.logback.contrib</groupId>
+            <groupId>com.linagora</groupId>
             <artifactId>logback-json-core</artifactId>
             <version>${project.version}</version>
         </dependency>
