--- a/json/pom.xml
+++ b/json/pom.xml
@@ -17,7 +17,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>ch.qos.logback.contrib</groupId>
+    <groupId>com.linagora</groupId>
     <artifactId>logback-contrib-parent</artifactId>
     <version>0.1.6-SNAPSHOT</version>
   </parent>
